# advent_of_code_2023

./: .gitignore  README.md  pyproject.toml
11/: p1.py
16/: p1.py
18/: p1.py
2023/: pyproject.toml
2023/01/: test.txt
2023/03/: p1.py
2023/09/: p1.py
2023/12/: p1.py
2023/13/: p1.py
2023/14/: p1.py
2023/15/: p1.py
2023/17/: p1.py
2023/19/: p1.py
2023/5/: p1.py
4/: p1.py
day1/: p1.py
day10/: p1.py
day2/: p1.py
day6/: p1.py
day7/: example.txt  p1.py
day8/: p1.py
day9/: p1.py
