[project]
name = "ADVENT-OF-CODE-2023"
version = "v0.1.0"
description = ""
authors = [
    { name = "Mattia Callegari", email = "mattia.callegari@mail.polimi.it" },
]
dependencies = [
    "tqdm>=4.66.1",
    "termcolor>=2.4.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }